tests/invalid/noSetters.ts
// @ts-nocheck
class MyClass {
	set value(v: number) {
		this._value = v;
	}
}
